--- a/index.html
+++ b/index.html
@@ -3,6 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Customer Churn Prediction</title>
+    <style>
+        body {
+          font-family: sans-serif;
+          max-width: 600px;
+          margin: 0 auto;
+          padding: 20px;
+        }
+        h1 {
+          text-align: center;
+          color: #333;
+        }
+        label {
+          display: block;
+          margin-bottom: 5px;
+        }
+        input[type="text"] {
+          width: 100%;
+          padding: 12px 20px;
+          margin-bottom: 20px;
+          box-sizing: border-box;
+          border: 2px solid #ccc;
+          border-radius: 4px;
+        }
+        input[type="submit"] {
+          width: 100%;
+          background-color: #4CAF50;
+          color: white;
+          padding: 14px 20px;
+          margin-bottom: 20px;
+          border: none;
+          border-radius: 4px;
+          cursor: pointer;
+        }
+        input[type="submit"]:hover {
+          background-color: #45a049;
+        }
+      </style>
 </head>
 <body>
 
